[package]
name = "lcolonq_codejam"
authors = ["James Kristoff <jskrist4@yahoo.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fixedbitset = "0.5.7"
js-sys = "0.3.99"
wasm-bindgen = "0.2.122"
