[package]
name = "lcolonq_codejam"
authors = ["James Kristoff <jskrist4@yahoo.com>"]
description = "A sample project with wasm-pack"
repository = "https://github.com/jskrist/lcolonq_microjam_2k26.git"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fixedbitset = "0.5.7"
js-sys = "0.3.99"

rapier2d = {version = "0.32.0", features = ["enhanced-determinism"]}
wasm-bindgen = "0.2.122"

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']